# certicoqwasm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  _CoqProject  coq-certicoq.opam  flake.nix  make_submodules.sh
.github/workflows/: build.yml  nix-action-default.yml  nix-benchmarks.yml
.nix/: config.nix
benchmarks/: Makefile  PRIMITIVE_TESTS  TESTS  benchmark.py  compute_feedback.py  insert_tailcalls.py  primes.v  process-rust-extraction.sh  run-n-times.py  run-node.js  run-wasm-template.js  run_rust_benchmarks.py  run_wasm.js  run_wasm_benchmarks.py  run_wasm_external_pp.js  test_primitive_i63.v  tests.v  tests_primes.v  uint63_unit_tests.v  wasm.js
benchmarks/js/: run_uint63_unit_tests.js  run_wasm.js  run_wasm_external_pp.js
benchmarks/lib/: _CoqProject  coqprime.v  count.py  parse_demo2_opt_coalesce_locals_wasm_module.v  stack_machine.v
benchmarks/rust/: .gitignore  ack_3_9.main  ack_3_9.rs.out  benchmark.py  bernstein_yang.main  bernstein_yang.rs.out  binom.main  color.main  demo1.main  demo1.rs.out  demo2.main  demo2.rs.out  even_10000.main  even_10000.rs.out  list_sum.main  list_sum.rs.out  sha_fast.main  sm_gauss_N.main  sm_gauss_N.rs.out  sm_gauss_nat.main  sm_gauss_nat.rs.out  sm_gauss_primInt.rs.out  vs_easy.main  vs_easy.rs.out  vs_hard.main  vs_hard.rs.out
benchmarks/rust/color-extracted/: Cargo.toml
benchmarks/wasm/: tests.v
bootstrap/certicoqc/: Makefile  test.v
docs/: compilation.html  index.html  pygments.css
plugin/: _CoqProject  certicoq.ml  certicoq.mli  certicoq_plugin.mlpack  g_certicoq.mlg  tm_util.ml
plugin/runtime/: prim_int63.c
submodules/: readme-wasmcert-deps.md
theories/: _CoqProject
theories/CodegenWASM/: LambdaANF_to_Clight_correct.v  LambdaANF_to_WASM.v  LambdaANF_to_WASM_correct.v  LambdaANF_to_WASM_utils.v  (+5 more)
(+72 files in other folders)
