opam-version: "2.0"
maintainer: "The CertiCoq Team"
homepage: "https://certicoq.org/"
dev-repo: "git+https://github.com/CertiCoq/certicoq"
bug-reports: "https://github.com/CertiCoq/certicoq/issues"
authors: ["Andrew Appel"
          "Yannick Forster"
          "Anvay Grover"
          "Joomy Korkut"
          "John Li"
          "Zoe Paraskevopoulou"
          "Matthieu Sozeau"
          "Matthew Weaver"
          "Abhishek Anand"
          "Greg Morrisett"
          "Randy Pollack"
          "Olivier Savary Belanger"
  ]
license: "MIT"
build: [
  ["bash" "./configure.sh"]
  [make "all"]
  [make "plugins"]
  [make "bootstrap"]
  [make "-C" "benchmarks" "all"] {with-test}
  [make "-C" "bootstrap" "tests"] {with-test}
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "stdlib-shims"
  "coq" {>= "8.16" & < "8.17~"}
  "coq-compcert" {= "3.11"}
  "coq-equations" {= "1.3+8.16"}
  # "coq-metacoq-erasure-plugin" {>= "1.2+8.17"} Temporarily disable as we rely on the submodule
  "coq-ext-lib" {>= "0.11.5"}
# for wasmcert (not packaged for opam yet)
  "coq-itree" {= "5.1.1" }
  "coq-parseque" {= "0.1.0" }
  "linenoise" {>= "1.4.0"}
  "cmdliner" {>= "1.1.0"}
  "mdx" {>= "1.9.0"}
]

synopsis: "A Verified Compiler for Gallina, Written in Gallina "
url {
  git: "https://github.com/CertiCoq/certicoq.git"
}
