[package]
name = "color"
version = "0.1.0"
authors = ["Cobra"]
edition = "2018"

[dependencies]
bumpalo = "3.5.0"
wasm-bindgen = "0.2.92"

[profile.release]
# Tell `rustc` to optimize for small code size.
# https://github.com/rustwasm/wasm-bindgen/issues/3451
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
